Implement login authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/basekit
 spring.datasource.username=admin
 spring.datasource.password=Lock3d15
+
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
